*Add chat option to block incoming whisper messages from players level 'X' and below.
*Add chat option to allow changing of the font used.
*Add chat option to allow changing of the font outline.
*Add option under general settings to allow resizing of the Minimap.
*Add option under general settings to enable/disable the Raid Reminder bar.

[b]General Changes:[/b]
*Changing Profiles in ElvUI should no longer require a reload.
*The profiles section of unitframes has been removed. The unitframe options have technically been reset, however if you load in with older data the UI will attempt to convert the database. If all is well you shouldn't notice any change.
*Replaced the Primary/Secondary layout portions of the Installation process with just a single layout section, this is due to being able to swap ElvUI profiles with your current spec.
*Any option that requires a reloadui is now a global option for all of your characters, in addition any option that may of required a reloadui has been reset to its default setting.
*Removed Spec 1 / Spec 2 sections of the datatext menu, there is now only one section to set your datatexts.
*Change recount icon skins again, this time de-saturate them to match the skin.
*Throttle the number of times a user can send the version of ElvUI he's using to a maximum of one time per 12 seconds to cut back on lag when first joining BG/Raid groups.
*The UIScale option inside ElvUI has been removed. Use the blizzard option if you wish to scale the UI. 
*Changing the UIScale should now prompt you to reloadui.
*Changing the UIScale while autoscale is still enabled will prompt you to disable the autoscale option.
*Profession bags should now appear to be different colors depending on the type of bag.
*Frequent updates are no longer being used for on the power bar for the Party, Raid 6-25, Raid 26-40 groups. This should greatly increase performance inside a raid setting.